# samovar_admin_bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 21e6386bc801_add_user_traffic_tables.py  62e470a0b397_initial_schema.py
docs/superpowers/plans/: 2026-05-14-remnawave-admin-bot.md
docs/superpowers/specs/: 2026-05-14-remnawave-bot-design.md
src/: config.py  main.py
src/apps/incidents/: ioc.py
src/apps/incidents/adapters/: gateway.py  orm.py  view.py
src/apps/incidents/application/: interactor.py
src/apps/incidents/application/interfaces/: gateway.py  view.py
src/apps/incidents/controllers/scheduler/: tasks.py
src/apps/incidents/controllers/telegram/: handlers.py
src/apps/incidents/domain/: commands.py  models.py
src/apps/nodes/: ioc.py
src/apps/nodes/adapters/: gateway.py  orm.py  view.py
src/apps/nodes/application/: interactor.py
src/apps/nodes/domain/: events.py  exceptions.py  models.py
src/apps/users/: ioc.py
src/apps/users/adapters/: gateway.py  orm.py  view.py
src/apps/users/application/: interactor.py
src/apps/users/domain/: commands.py  models.py
src/infrastructure/db/: engine.py
src/infrastructure/remnawave/: client.py
src/infrastructure/telegram/: middleware.py  setup.py
tests/apps/incidents/: test_interactor.py
tests/apps/nodes/: test_interactor.py  test_monitoring_loop.py
tests/apps/users/: test_handler_helpers.py  test_scheduler_helpers.py
tests/infrastructure/: test_middleware.py
(+9 files in other folders)
